RESOLVED FIXED134975
Fix warnings caused by unused parameter
https://bugs.webkit.org/show_bug.cgi?id=134975
Summary Fix warnings caused by unused parameter
KwangHyuk
Reported 2014-07-16 08:36:48 PDT
Fix simple warning caused by unused parameter.
Attachments
Patch (2.05 KB, patch)
2014-07-16 08:39 PDT, KwangHyuk
gyuyoung.kim: review-
Patch (2.09 KB, patch)
2014-07-17 05:36 PDT, KwangHyuk
no flags
Patch (2.17 KB, patch)
2014-07-17 17:54 PDT, KwangHyuk
no flags
KwangHyuk
Comment 1 2014-07-16 08:39:44 PDT
Gyuyoung Kim
Comment 2 2014-07-16 17:48:20 PDT
Comment on attachment 234997 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=234997&action=review > Source/WebKit2/ChangeLog:3 > + Fix warning. Title really doesn't contain any information.
KwangHyuk
Comment 3 2014-07-17 05:36:06 PDT
Created attachment 235065 [details] Patch Apply reviewer's comment.
Gyuyoung Kim
Comment 4 2014-07-17 07:16:38 PDT
Comment on attachment 235065 [details] Patch LGTM
Darin Adler
Comment 5 2014-07-17 09:28:03 PDT
Comment on attachment 235065 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=235065&action=review > Source/WebKit2/UIProcess/API/efl/EwkView.cpp:222 > +void EwkViewEventHandler<EVAS_CALLBACK_MOUSE_IN>::handleEvent(void*, Evas*, Evas_Object*, void*) > { > Ewk_View_Smart_Data* smartData = static_cast<Ewk_View_Smart_Data*>(data); How can this possibly compile? The data argument is used!
KwangHyuk
Comment 6 2014-07-17 17:44:18 PDT
(In reply to comment #5) > (From update of attachment 235065 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=235065&action=review > > > Source/WebKit2/UIProcess/API/efl/EwkView.cpp:222 > > +void EwkViewEventHandler<EVAS_CALLBACK_MOUSE_IN>::handleEvent(void*, Evas*, Evas_Object*, void*) > > { > > Ewk_View_Smart_Data* smartData = static_cast<Ewk_View_Smart_Data*>(data); > > How can this possibly compile? The data argument is used! You are right, last patch was written on the old snapshot. :( Thank you for you correction. I will update the patch soon.
KwangHyuk
Comment 7 2014-07-17 17:54:06 PDT
Created attachment 235102 [details] Patch rebase the patch.
Gyuyoung Kim
Comment 8 2014-07-17 18:59:29 PDT
Comment on attachment 235065 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=235065&action=review >>> Source/WebKit2/UIProcess/API/efl/EwkView.cpp:222 >>> Ewk_View_Smart_Data* smartData = static_cast<Ewk_View_Smart_Data*>(data); >> >> How can this possibly compile? The data argument is used! > > You are right, last patch was written on the old snapshot. :( > Thank you for you correction. > I will update the patch soon. Oops. I'm sorry. I missed it. But, it is weird because efl-wk2 ews was fine. :( Let me check if efl ews is working correctly.
Gyuyoung Kim
Comment 9 2014-07-17 18:59:30 PDT
Comment on attachment 235065 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=235065&action=review >>> Source/WebKit2/UIProcess/API/efl/EwkView.cpp:222 >>> Ewk_View_Smart_Data* smartData = static_cast<Ewk_View_Smart_Data*>(data); >> >> How can this possibly compile? The data argument is used! > > You are right, last patch was written on the old snapshot. :( > Thank you for you correction. > I will update the patch soon. Oops. I'm sorry. I missed it. But, it is weird because efl-wk2 ews was fine. :( Let me check if efl ews is working correctly.
Gyuyoung Kim
Comment 10 2014-07-17 19:19:01 PDT
(In reply to comment #9) > (From update of attachment 235065 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=235065&action=review > > >>> Source/WebKit2/UIProcess/API/efl/EwkView.cpp:222 > >>> Ewk_View_Smart_Data* smartData = static_cast<Ewk_View_Smart_Data*>(data); > >> > >> How can this possibly compile? The data argument is used! > > > > You are right, last patch was written on the old snapshot. :( > > Thank you for you correction. > > I will update the patch soon. > > Oops. I'm sorry. I missed it. But, it is weird because efl-wk2 ews was fine. :( Let me check if efl ews is working correctly. efl-ews tested this patch based on latest code. Latest code doesn't use the argument. That's why efl-ews didn't detect build break !
Gyuyoung Kim
Comment 11 2014-07-17 19:20:49 PDT
Comment on attachment 235102 [details] Patch r+ed again. And I will take care of reviewing further. Thanks Darin !
WebKit Commit Bot
Comment 12 2014-07-20 22:37:21 PDT
Comment on attachment 235102 [details] Patch Clearing flags on attachment: 235102 Committed r171291: <http://trac.webkit.org/changeset/171291>
WebKit Commit Bot
Comment 13 2014-07-20 22:37:26 PDT
All reviewed patches have been landed. Closing bug.
Tanay
Comment 14 2014-09-15 01:37:58 PDT
*** Bug 134719 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.