Fix warnings caused by unused parameter. https://bugs.webkit.org/show_bug.cgi?id=134975

Patch by KwangHyuk Kim <hyuki.kim@samsung.com> on 2014-07-20
Reviewed by Gyuyoung Kim.

Fix warnings on EwkView.cpp and LegacySessionStateCodingNone.cpp that are caused by unused parameter data.

* UIProcess/API/efl/EwkView.cpp:
(EwkViewEventHandler<EVAS_CALLBACK_MOUSE_IN>::handleEvent):
* UIProcess/LegacySessionStateCodingNone.cpp:
(WebKit::decodeLegacySessionState):

Canonical link: https://commits.webkit.org/153009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171291 268f45cc-cd09-0410-ab3c-d52691b4dbfc