Source/WebKit2/UIProcess/API/efl/EwkView.cpp
@@ -217,7 +217,7 @@ void EwkViewEventHandler<EVAS_CALLBACK_MOUSE_WHEEL>::handleEvent(void* data, Eva
 }
 
 template <>
-void EwkViewEventHandler<EVAS_CALLBACK_MOUSE_IN>::handleEvent(void* data, Evas*, Evas_Object*, void*)
+void EwkViewEventHandler<EVAS_CALLBACK_MOUSE_IN>::handleEvent(void*, Evas*, Evas_Object*, void*)
 {
     // FIXME: self->updateCursor(); was removed in order to fix crash caused by invalid cursor image.
     // new cursor implementation should be added for curso image restoration previously used for.
